--- a/docker_notes.html
+++ b/docker_notes.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Hello Strapdown</title>
+<title>Hello There Strapdown</title>
 
 <xmp theme="united" style="display:none;">
 # Markdown text goes in here
