--- a/docker_notes.html
+++ b/docker_notes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Hello There Strapdown</title>
-
+Some incidental content...
 <xmp theme="united" style="display:none;">
 # Markdown text goes in here
 
