--- a/docker_notes.html
+++ b/docker_notes.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <title>Hello There Strapdown</title>
-Some incidental content...
 <xmp theme="united" style="display:none;">
 # Markdown text goes in here
 
 ## Chapter 1
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+Bananas: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
 et dolore magna aliqua. 
 
 ## Chapter 2
@@ -18,5 +17,5 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non pr
 culpa qui officia deserunt mollit anim id est laborum.
 </xmp>
 
-<script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="static/strapdown.js"></script>
 </html>
